crates/gossamer-diagnostics/tests/snapshots/GT0066.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GT0066]: `.into()` was written between two types with no conversion - here
--- framed ---
error[GT0066]: `.into()` was written between two types with no conversion
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
