crates/gossamer-diagnostics/tests/snapshots/GT0074.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GT0074]: A function body answers a value through a signature that declares no - here
--- framed ---
error[GT0074]: A function body answers a value through a signature that declares no
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
