crates/gossamer-diagnostics/tests/snapshots/GT0075.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GT0075]: A `&` or `&mut` applied to a range index. The index answers a fresh - here
--- framed ---
error[GT0075]: A `&` or `&mut` applied to a range index. The index answers a fresh
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
