crates/gossamer-diagnostics/tests/snapshots/GT0076.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
assertion_line: 86
expression: rendered
---
--- plain ---
error[GT0076]: A goroutine's closure reads a binding whose type holds nested - here
--- framed ---
error[GT0076]: A goroutine's closure reads a binding whose type holds nested
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
